--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
     - "3.6"
 before_install:
     - pip install pytest pytest-cov
+    - pip install coveralls
 script:
-    - pytest
+    - py.test
 after_success:
     - coveralls
+
