--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = --doctest-modules --cov-report term-missing --cov DeriveAlive_working_chen
+addopts = --doctest-modules --cov-report term-missing --cov DeriveAlive
