Added instruction to .travis.yml install

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
+    - python setup.py install
 script:
     - py.test
 after_success:
