--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
     - pip install coveralls
     - python setup.py install
 script:
-    - pytest tests/test_DeriveAlive.py
+    - py.test
 after_success:
     - coveralls
